BUG#33429: No check for maxvalue before adding partition

mysql-test/r/partition_range.result:
  Added new test cases
mysql-test/t/partition_range.test:
  Added new test cases
sql/sql_partition.cc:
  Added check that last partition hasn't got maxvalue defined when
  executing ADD PARTITION